# swiss_re_assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-pull-request.yml  snyk-checks.yml
build_tools/: build_docker_image.sh  build_package.sh  check_docker_image.sh
docs/: code_formatting.md  coding-assignment-2023-06-02.md  docker.md  testing.md
sr_cli/: input.py  line_reader.py  logline.py  logstatistic.py  main.py  output.py  process.py  process_log.py  statistics.py  utils.py
tests/: run_tests.sh  test_functionality.py  test_input.py  test_line_reader.py  test_output.py  test_parse.py  test_process.py  test_statistics.py  test_utils.py
tests/resources/: test_sample.data
